--- a/manifests/grafana/grafana-ingress.yaml
+++ b/manifests/grafana/grafana-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: monitoring
 spec:
   rules:
-  - host: grafana.internal.carlosedp.com
+  - host: grafana.internal.jesses.io
     http:
       paths:
       - path: /
