--- a/manifests/prometheus/prometheus-k8s-ingress.yaml
+++ b/manifests/prometheus/prometheus-k8s-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: monitoring
 spec:
   rules:
-  - host: prometheus.internal.carlosedp.com
+  - host: prometheus.internal.jesses.io
     http:
       paths:
       - path: /
