--- a/manifests/alertmanager/alertmanager.yaml
+++ b/manifests/alertmanager/alertmanager.yaml
@@ -2,10 +2,10 @@ apiVersion: monitoring.coreos.com/v1
 kind: Alertmanager
 metadata:
   name: main
+  namespace: monitoring
   labels:
     alertmanager: main
 spec:
   replicas: 1
   baseImage: carlosedp/alertmanager
   version: v0.14.0
-
