--- a/manifests/prometheus/prometheus-k8s-service-monitor-traefik.yaml
+++ b/manifests/prometheus/prometheus-k8s-service-monitor-traefik.yaml
@@ -2,6 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: traefik-ingress-lb
+  namespace: monitoring
   labels:
     k8s-app: traefik-ingress-lb
 spec:
