--- a/manifests/kube-state-metrics/kube-state-metrics-deployment.yaml
+++ b/manifests/kube-state-metrics/kube-state-metrics-deployment.yaml
@@ -27,7 +27,7 @@ spec:
         - name: http-self
           containerPort: 9443
       - name: addon-resizer
-        image: carlosedp/addon-resizer:2.1 
+        image: gcr.io/google-containers/addon-resizer-arm:2.1
         resources:
           limits:
             cpu: 100m
