--- a/manifests/prometheus-operator/prometheus-operator.yaml
+++ b/manifests/prometheus-operator/prometheus-operator.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     k8s-app: prometheus-operator
   name: prometheus-operator
+  namespace: monitoring
 spec:
   replicas: 1
   template:
@@ -14,7 +15,7 @@ spec:
       containers:
       - args:
         - --kubelet-service=kube-system/kubelet
-        - --prometheus-config-reloader=carlosedp/prometheus-config-reloader:v0.0.2
+        - --prometheus-config-reloader=jessestuart/prometheus-config-reloader
         - --config-reloader-image=carlosedp/configmap-reload:v0.2.2-arm
         image: jessestuart/prometheus-operator:v0.19.0
         name: prometheus-operator
